[gd_scene load_steps=7 format=2]

[ext_resource path="res://GameHUDRelated/CombinationRelatedPanels/CombinationTopPanel/CombinationTopPanel_SideBorder.png" type="Texture" id=1]
[ext_resource path="res://GameHUDRelated/CombinationRelatedPanels/CombinationTopPanel/CombinationTopPanel_FillBackground.png" type="Texture" id=2]
[ext_resource path="res://GameHUDRelated/CombinationRelatedPanels/CombinationIcon.png" type="Texture" id=3]
[ext_resource path="res://MiscRelated/GUI_Category_Related/AdvancedButton/AdvancedButtonWithTooltip.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameHUDRelated/CombinationRelatedPanels/CombinationTopPanel/CombinationTopPanel.gd" type="Script" id=5]
[ext_resource path="res://GameHUDRelated/CombinationRelatedPanels/CombinationTopPanel/CombinationTopPanel_TopBottomBorder.png" type="Texture" id=6]

[node name="CombinationTopPanel" type="MarginContainer"]
margin_right = 36.0
margin_bottom = 30.0
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 36.0
margin_bottom = 36.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 2
custom_constants/separation = 0

[node name="LeftBorder" type="MarginContainer" parent="HBoxContainer"]
margin_right = 2.0
margin_bottom = 36.0
mouse_filter = 2
size_flags_vertical = 3

[node name="LeftBorderPic" type="TextureRect" parent="HBoxContainer/LeftBorder"]
margin_right = 2.0
margin_bottom = 36.0
mouse_filter = 2
size_flags_vertical = 3
texture = ExtResource( 1 )
stretch_mode = 2

[node name="MiddleFill" type="MarginContainer" parent="HBoxContainer"]
margin_left = 2.0
margin_right = 34.0
margin_bottom = 36.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MiddleFill"]
margin_right = 32.0
margin_bottom = 36.0
mouse_filter = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="TopBorder" type="TextureRect" parent="HBoxContainer/MiddleFill"]
margin_right = 32.0
margin_bottom = 2.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 2
texture = ExtResource( 6 )
stretch_mode = 2

[node name="BottomBorder" type="TextureRect" parent="HBoxContainer/MiddleFill"]
margin_top = 34.0
margin_right = 32.0
margin_bottom = 36.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 10
texture = ExtResource( 6 )
stretch_mode = 2

[node name="MainContainer" type="MarginContainer" parent="HBoxContainer/MiddleFill"]
margin_right = 4.0
margin_bottom = 36.0
mouse_filter = 2
size_flags_horizontal = 2
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MiddleFill/MainContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 2.0
margin_bottom = 34.0
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 6

[node name="CombinationMoreDetailsButton" parent="HBoxContainer/MiddleFill/MainContainer/HBoxContainer" instance=ExtResource( 4 )]
visible = false
margin_top = 4.0
margin_right = 24.0
margin_bottom = 28.0
size_flags_vertical = 6
texture_normal = ExtResource( 3 )
about_button_index_trigger = 2
define_tooltip_construction_in_button = true

[node name="ComboTowerIconsPanel" type="HBoxContainer" parent="HBoxContainer/MiddleFill/MainContainer/HBoxContainer"]
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
mouse_filter = 2
size_flags_vertical = 4

[node name="RightBorder" type="MarginContainer" parent="HBoxContainer"]
margin_left = 34.0
margin_right = 36.0
margin_bottom = 36.0
mouse_filter = 2
size_flags_horizontal = 8
size_flags_vertical = 3

[node name="RightBorderPic" type="TextureRect" parent="HBoxContainer/RightBorder"]
margin_right = 2.0
margin_bottom = 36.0
mouse_filter = 2
size_flags_vertical = 3
texture = ExtResource( 1 )
stretch_mode = 2

[connection signal="pressed_mouse_event" from="HBoxContainer/MiddleFill/MainContainer/HBoxContainer/CombinationMoreDetailsButton" to="." method="_on_CombinationMoreDetailsButton_pressed_mouse_event"]
